tests/ui/delegation/generics/free-fn-to-free-fn.stderr
error[E0107]: function takes 0 lifetime arguments but 1 lifetime argument was supplied
  --> $DIR/free-fn-to-free-fn.rs:19:5
   |
LL |     late::<'static>(&0u8);
   |     ^^^^----------- help: remove the unnecessary generics
   |     |
   |     expected 0 lifetime arguments
   |
note: function defined here, with 0 lifetime parameters
  --> $DIR/free-fn-to-free-fn.rs:15:17
   |
LL | reuse to_reuse::late;
   |                 ^^^^

error[E0277]: the trait bound `S: Clone` is not satisfied
  --> $DIR/free-fn-to-free-fn.rs:23:12
   |
LL |     bounds(S);
   |     ------ ^ the trait `Clone` is not implemented for `S`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bounds`
  --> $DIR/free-fn-to-free-fn.rs:11:22
   |
LL |     pub fn bounds<T: Clone>(_: T) {}
   |                      ^^^^^ required by this bound in `bounds`
...
LL | reuse to_reuse::bounds;
   |                 ------ required by a bound in this function
help: consider annotating `S` with `#[derive(Clone)]`
   |
LL +     #[derive(Clone)]
LL |     struct S;
   |

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0277.
For more information about an error, try `rustc --explain E0107`.
